--- a/Site Piers Faccini Yan Ihringer/index.html
+++ b/Site Piers Faccini Yan Ihringer/index.html
@@ -61,9 +61,9 @@
 
 <h2>Contacts</h2>
 <ol>
-	<li>email@example.com</li>
+	<li>Piers@Faccini.com</li>
 	<li>@piersfaccini on Instagram</li>
-	<li>Adresse</li>
+	
 </ol>
 
 
